<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@drawable/com_img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="EXPLORE ABOUT" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="VYAPAR EXPRESS"
                android:textColor="@color/redlight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="left"
                android:text="@string/compmsg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="OUR MISSION" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="left"
                android:text="@string/mission" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="OUR VISION" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:gravity="left"
                android:textColor="@color/black"
                android:text="@string/vision" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:background="@color/header">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="OUR INDUSTRIES" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:drawableRight="@drawable/line"
                        android:text="RICE" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:drawableRight="@drawable/line"
                        android:text="WHEAT" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:drawableRight="@drawable/line"
                        android:text="PULSES" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:drawableRight="@drawable/line"
                        android:text="FLOUR" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:text="COFFEE" />
                </LinearLayout>
            </LinearLayout>

            <!--<WebView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textSize="18sp" />-->
        </LinearLayout>

    </ScrollView>
</LinearLayout>